Convert most instances of String.format/formatted to string concatenation